# Stat-Logger

./: .gitignore  CMakeLists.txt  ProcessDataHandler.cpp  ProcessDataHandler.h  README.md  main.cpp
ProcessDataHandler/: CMakeLists.txt  ProcessDataHandler.cpp  ProcessDataHandler.h
